--- a/bag/templates/bag/bag_buttons.html
+++ b/bag/templates/bag/bag_buttons.html
@@ -1,7 +1,8 @@
 {% if sample_added == False %}
     {% if breakfast_blend_sample %}
         <p>Since you're buying one of everything, we'd love to give you a 20g sample of our Breakfast Blend!</p>
-        <form action="{% url 'add_to_bag' product_id=breakfast_blend_sample %}" method="post">
+        <form action="{% url 'add_to_bag' product_id=breakfast_blend_sample %}"
+              method="post">
             {% csrf_token %}
             <input type="hidden" name="weight" value="20">
             <input type="hidden" name="is_sample" value="true">
@@ -15,33 +16,41 @@
         <ul>
             {% for tea in sample_or_samples %}
                 <li>
-                    <form action="{% url 'add_to_bag' product_id=tea.id %}" method="post" aria-label="Add sample to bag">
+                    <form action="{% url 'add_to_bag' product_id=tea.id %}"
+                          method="post"
+                          aria-label="Add sample to bag">
                         {% csrf_token %}
                         <input type="hidden" name="weight" value="5">
                         <input type="hidden" name="is_sample" value="true">
                         <input type="hidden" name="redirect_url" value="{% url 'view_bag' %}">
-                        <button type="submit" class="btn btn-sm mb-2">
-                            Continue with 5g of {{ tea.name }}
-                        </button>
+                        <button type="submit" class="btn btn-sm mb-2">Continue with 5g of {{ tea.name }}</button>
                     </form>
                 </li>
             {% endfor %}
         </ul>
     {% endif %}
 
-    <a href="{% url 'checkout' %}" class="btn" aria-label="Go to checkout without free sample">
-        Continue to Checkout Without Claiming Free Sample
-    </a>
-
-{% else %}
-    <p><strong>You've selected your free sample!</strong></p>
-
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'checkout' %}" class="btn btn-lg" aria-label="Go to checkout">
-        Proceed to Checkout
-    </a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'checkout' %}"
+           class="btn"
+           aria-label="Go to checkout without free sample">Continue to Checkout Without Claiming Free Sample</a>
     {% else %}
-        <p>You must be logged in to go to checkout! <a href="{% url 'account_login' %}">click here to sign in.</a></p>
-    {% endif %}
-{% endif %}
+        <p>
+            <a href="{% url 'account_login' %}">Sign In</a> or <a href="{% url 'account_signup' %}">Register an account</a> with us in order to continue with your order!
+        </p>
 
+    {% else %}
+        <p>
+            <strong>You've selected your free sample!</strong>
+        </p>
+
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'checkout' %}"
+               class="btn btn-lg"
+               aria-label="Go to checkout">Proceed to Checkout</a>
+        {% else %}
+            <p>
+                You must be logged in to go to checkout! <a href="{% url 'account_login' %}">click here to sign in.</a>
+            </p>
+        {% endif %}
+    {% endif %}
