--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -49,7 +49,7 @@
                             <p class="my-0 mx-2 text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">${{ item.subtotal }}</p>
+                            <p class="my-0 small text-muted">£{{ item.subtotal }}</p>
                         </div>
                     </div>
                 {% endfor %}
