--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -13,7 +13,7 @@
                 <h1>{% trans "Sign Up" %}</h1>
 
                 <p>
-                    {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+                    {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}"><strong>sign in</strong></a>.{% endblocktrans %}
                 </p>
 
                 <form class="signup"
