--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
             {% block content %}
             {% endblock content %}
         </main>
-        <footer class="text-center mt-3 bg-light pt-3">
+        <footer class="text-center mt-3 bg-light pt-3 footer">
             <div class="container">
                 <div class="row">
                     <div class="col-12 mx-auto border-bottom">
