UX improvements made to about template and order confirmation email body

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <h1>About Us</h1>
+    <h1 class="orange-text">About Us</h1>
 
     <div class="container">
         <div class="row">
@@ -32,7 +32,7 @@
                     <a href="https://facebook.com"
                        target="_blank"
                        rel="noopener"
-                       aria-label="Visit our Facebook page">here!</a>
+                       aria-label="Visit our Facebook page"><strong>here!</strong></a>
                 </p>
                 <p>
                     More questions about any of our teas? Do you want to work for me? Send me some fan mail? Slide into my DMs? For any and all enquiries please fill out the contact form below!
@@ -85,6 +85,7 @@
                     <div class="col-12">
                         <a target="_blank"
                          aria-label="See our privacy policy"
+                         class="btn taller-font"
                            href="https://www.termsfeed.com/live/ec1f74d6-bb05-414c-9065-7c3e8df910e6">Click here to see our privacy policy!</a>
                     </div>
                 </div>
