Added UX design to bag templates

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -82,7 +82,7 @@
             <h2>There are no items in your bag!</h2>
         {% endif %}
         <a href="{% url 'shop' %}" class="btn btn-lg btn-outline-black mt-3">
-            <span>Back to Shop</span>
+            <span><< Back to Shop</span>
         </a>
     </div>
 
