--- a/brewsreviews/templates/brewsreviews/blog_post.html
+++ b/brewsreviews/templates/brewsreviews/blog_post.html
@@ -27,7 +27,7 @@
                             <a class="btn mb-3" href="{% url 'product_detail' sku=post.tea.sku %}"
                                aria-label="See product of blog post">Go to Product Page to buy!</a>
                             <a class="btn" href="{% url 'blog' %}"
-                               aria-label="See product of blog post"><< Back to blog</a>
+                               aria-label="See product of blog post">&lt;&lt; Back to blog</a>
                         </div>
                     </div>
                 </div>
